--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
   "name": "echarts-wrapper-react",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "React Wrapper for Apache Echarts",
+  "keywords": [
+    "react",
+    "echarts",
+    "charts",
+    "chart",
+    "data-visualization",
+    "visualization",
+    "react-component",
+    "graph",
+    "wrapper",
+    "echarts-wrapper",
+    "charting-library",
+    "echarts-react",
+    "charting-library",
+    "react-echarts",
+    "interactive-charts"
+  ],
   "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
